--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ctrl/tinycolor": "^4.1.0",
     "@tailwindcss/vite": "^4.1.4",
     "color-namer": "^1.4.0",
+    "colorthief": "^2.6.0",
     "framer-motion": "^12.7.4",
     "react": "^19.0.0",
     "react-color-palette": "^7.3.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1"
   },
