--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
     "@tailwindcss/vite": "^4.1.4",
     "color-namer": "^1.4.0",
     "colorthief": "^2.6.0",
+    "fast-xml-parser": "^5.2.0",
     "framer-motion": "^12.7.4",
+    "highlight.js": "^11.11.1",
+    "lucide-react": "^0.525.0",
+    "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-color-palette": "^7.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.1"
+    "react-json-view": "^1.21.3",
+    "react-router-dom": "^7.5.1",
+    "react-textarea-autosize": "^8.5.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
